--- a/Proyecto1/Clientes/templates/Clientes/home.html
+++ b/Proyecto1/Clientes/templates/Clientes/home.html
@@ -26,7 +26,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'crear_cuenta' %}">Crear Cuenta</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-                            <ul class="dropdown-menu" aria-current="navbarDropdown">
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'agregar_productos' %}">Agregar Producto</a></li>
                                 <li><a class="dropdown-item" href="{% url 'buscar' %}">Buscar Productos</a></li>
                                 <li><a class="dropdown-item" href="{% url 'productos' %}">Productos</a></li>
